# Evestract

./: .gitignore  CMakeLists.txt  LICENSE  README
src/: bytes.h  datid.c  datid.h  dialog.c  dialog.h  dialogmain.c  dspweather.h  event.c  event.h  firstpass.c  firstpass.h  ftable.c  ftable.h  ftablemain.c  main.c  mebmsb.c  npc.c  npc.h  npcmain.c  pivotable.c  readfile.c  readfile.h  schedgen.c  script.c  script.h  scriptint.h  text.c  text.h  weather.c
src/bytes/: bytes.h
src/experiments/: fontpatch.c  tga.c  tga.h
src/mapstract/: mapstract.c
src/parser/: parser.c  parser.h
src/parser/parsers/: bmp2.c  bmp2.h  generator.c  generator.h  meb.c  meb.h  mld.c  mld.h  msb.c  msb.h  scheduler.c  scheduler.h  vum.c  vum.h
src/resource/: resource.c  resource.h
src/texstract/: bmp2.c  bmp2.h  mtx.c  mtx.h  texstract.c  tga.c  tga.h
src/utils/: locresources.c  xilzss.c  xistable.c
